--- a/sass/main.scss
+++ b/sass/main.scss
@@ -45,5 +45,6 @@
 @import 'modules/service-benefits';
 @import 'modules/service-steps';
 @import 'modules/foto-report';
+@import 'modules/service-info';
 
 @import 'pages/home';
