--- a/css/main.css
+++ b/css/main.css
@@ -1123,6 +1123,8 @@ body {
 a {
   color: inherit;
   text-decoration: none; }
+  a[href*=tel] {
+    white-space: nowrap; }
 
 sup {
   vertical-align: top;
@@ -1230,6 +1232,9 @@ h5, .h5 {
       font-size: 14px; } }
   .user-content h1, .user-content h2, .user-content h3, .user-content h4, .user-content h5, .user-content .h1, .user-content .h2, .user-content .h3, .user-content .h4, .user-content .h5 {
     margin-bottom: 10px; }
+    @media (max-width: 680px) {
+      .user-content h1, .user-content h2, .user-content h3, .user-content h4, .user-content h5, .user-content .h1, .user-content .h2, .user-content .h3, .user-content .h4, .user-content .h5 {
+        margin-bottom: 5px; } }
     .user-content h1:last-child, .user-content h2:last-child, .user-content h3:last-child, .user-content h4:last-child, .user-content h5:last-child, .user-content .h1:last-child, .user-content .h2:last-child, .user-content .h3:last-child, .user-content .h4:last-child, .user-content .h5:last-child {
       margin-bottom: 0; }
   .user-content p, .user-content ul, .user-content ol, .user-content table, .user-content img, .user-content blockquote, .user-content q {
@@ -2771,12 +2776,14 @@ button::-moz-focus-inner {
     z-index: 1; }
     @media (max-width: 1024px) {
       .wave-white-top:before {
-        top: -49px;
-        height: 60px; } }
+        top: -39px;
+        height: 40px;
+        background-size: 100% 100%; } }
     @media (max-width: 680px) {
       .wave-white-top:before {
         top: -27px;
-        height: 32px; } }
+        height: 32px;
+        background-size: 100% auto; } }
 
 .wave-white-bottom {
   position: relative; }
@@ -2794,12 +2801,14 @@ button::-moz-focus-inner {
     z-index: 1; }
     @media (max-width: 1024px) {
       .wave-white-bottom:after {
-        bottom: -49px;
-        height: 60px; } }
+        bottom: -39px;
+        height: 40px;
+        background-size: 100% 100%; } }
     @media (max-width: 680px) {
       .wave-white-bottom:after {
         bottom: -24px;
-        height: 32px; } }
+        height: 32px;
+        background-size: 100% auto; } }
     @media (max-width: 480px) {
       .wave-white-bottom:after {
         bottom: -27px; } }
@@ -2820,12 +2829,14 @@ button::-moz-focus-inner {
     z-index: 1; }
     @media (max-width: 1024px) {
       .wave-blue-top:before {
-        top: -49px;
-        height: 60px; } }
+        top: -39px;
+        height: 40px;
+        background-size: 100% 100%; } }
     @media (max-width: 680px) {
       .wave-blue-top:before {
         top: -27px;
-        height: 32px; } }
+        height: 32px;
+        background-size: 100% auto; } }
 
 .wave-blue-bottom {
   position: relative; }
@@ -2843,12 +2854,14 @@ button::-moz-focus-inner {
     z-index: 1; }
     @media (max-width: 1024px) {
       .wave-blue-bottom:after {
-        bottom: -49px;
-        height: 60px; } }
+        bottom: -39px;
+        height: 40px;
+        background-size: 100% 100%; } }
     @media (max-width: 680px) {
       .wave-blue-bottom:after {
         bottom: -24px;
-        height: 32px; } }
+        height: 32px;
+        background-size: 100% auto; } }
     @media (max-width: 480px) {
       .wave-blue-bottom:after {
         bottom: -27px; } }
@@ -2869,12 +2882,14 @@ button::-moz-focus-inner {
     z-index: 1; }
     @media (max-width: 1024px) {
       .wave-gray-top:before {
-        top: -49px;
-        height: 60px; } }
+        top: -39px;
+        height: 40px;
+        background-size: 100% 100%; } }
     @media (max-width: 680px) {
       .wave-gray-top:before {
         top: -27px;
-        height: 32px; } }
+        height: 32px;
+        background-size: 100% auto; } }
 
 .wave-gray-bottom {
   position: relative; }
@@ -2892,12 +2907,14 @@ button::-moz-focus-inner {
     z-index: 1; }
     @media (max-width: 1024px) {
       .wave-gray-bottom:after {
-        bottom: -49px;
-        height: 60px; } }
+        bottom: -39px;
+        height: 40px;
+        background-size: 100% 100%; } }
     @media (max-width: 680px) {
       .wave-gray-bottom:after {
         bottom: -24px;
-        height: 32px; } }
+        height: 32px;
+        background-size: 100% auto; } }
     @media (max-width: 480px) {
       .wave-gray-bottom:after {
         bottom: -27px; } }
@@ -3722,6 +3739,29 @@ button::-moz-focus-inner {
       -o-transition: all 0.3s ease;
       transition: all 0.3s ease; }
 
+.big-slider .video-play {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate3d(-50%, -50%, 0);
+  transform: translate3d(-50%, -50%, 0); }
+  @media (max-width: 1480px) {
+    .big-slider .video-play {
+      left: 75%; } }
+  @media (max-width: 768px) {
+    .big-slider .video-play {
+      top: 30%;
+      left: 50%; } }
+  @media (max-width: 680px) {
+    .big-slider .video-play {
+      top: 25%; } }
+  @media (max-width: 480px) {
+    .big-slider .video-play {
+      top: 23%; } }
+  @media (max-width: 375px) {
+    .big-slider .video-play {
+      top: 20%; } }
+
 @media (max-width: 768px) {
   .big-slider .slider-next, .big-slider .slider-prev {
     top: 25%; } }
@@ -3738,7 +3778,7 @@ button::-moz-focus-inner {
   @media (max-width: 1024px) {
     .big-slider .slider-dots {
       top: 60px;
-      left: 12px; } }
+      left: 30px; } }
   @media (max-width: 768px) {
     .big-slider .slider-dots {
       top: initial;
@@ -3747,35 +3787,50 @@ button::-moz-focus-inner {
       -webkit-transform: translate3d(-50%, 0, 0);
       transform: translate3d(-50%, 0, 0); } }
 
-.big-slider--slided .big-slide__info {
-  padding-bottom: 40px; }
+.big-slider--slided .big-slide {
+  padding-top: 200px; }
+  @media (max-width: 1480px) {
+    .big-slider--slided .big-slide {
+      padding-top: 120px; } }
+  @media (max-width: 1024px) {
+    .big-slider--slided .big-slide {
+      padding-top: 90px; } }
+  @media (max-width: 768px) {
+    .big-slider--slided .big-slide {
+      padding-top: 0; } }
+
+@media (max-width: 768px) {
+  .big-slider--slided .big-slide__info {
+    margin: 20px auto 30px; } }
 
 .big-slide {
   display: -webkit-box !important;
   display: -ms-flexbox !important;
   display: flex !important;
-  -webkit-box-align: start;
-  -ms-flex-align: start;
-  align-items: flex-start;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  width: 100%;
   min-height: 762px;
-  padding-top: 200px;
+  padding-top: 40px;
+  padding-bottom: 40px;
   background-position: center center;
   background-size: cover;
   outline: none; }
   @media (max-width: 1480px) {
     .big-slide {
-      padding-top: 140px;
       min-height: 610px; } }
   @media (max-width: 1024px) {
     .big-slide {
-      min-height: 480px;
-      padding-top: 100px; } }
+      min-height: 480px; } }
   @media (max-width: 768px) {
     .big-slide {
       min-height: initial;
-      padding-top: 0px;
       background: #2a2c3d;
       background-image: none !important; } }
+  @media (max-width: 680px) {
+    .big-slide {
+      padding-top: 33px; } }
 
 .big-slide__img {
   display: none; }
@@ -3790,7 +3845,6 @@ button::-moz-focus-inner {
 .big-slide__info {
   max-width: 560px;
   margin-left: 60px;
-  padding-bottom: 40px;
   text-align: center;
   color: #fff; }
   @media (max-width: 1480px) {
@@ -3800,29 +3854,79 @@ button::-moz-focus-inner {
   @media (max-width: 1024px) {
     .big-slide__info {
       margin-left: 0px;
-      padding-left: 50px; } }
+      padding-left: 60px; } }
   @media (max-width: 768px) {
     .big-slide__info {
       max-width: 620px;
-      margin: 20px auto 30px;
-      padding-left: 0;
-      padding-bottom: 5px; } }
+      margin: 20px auto 0;
+      padding-left: 0; } }
   @media (max-width: 480px) {
     .big-slide__info .h1 {
       font-size: 20px; } }
 
-.big-slide__descr {
+.big-slide__descr, .big-slide__facts {
   max-width: 360px;
   margin: 0 auto 40px; }
   @media (max-width: 1480px) {
-    .big-slide__descr {
+    .big-slide__descr, .big-slide__facts {
       margin-bottom: 30px; } }
   @media (max-width: 1024px) {
-    .big-slide__descr {
+    .big-slide__descr, .big-slide__facts {
       max-width: 480px; } }
   @media (max-width: 680px) {
-    .big-slide__descr {
+    .big-slide__descr, .big-slide__facts {
       margin-bottom: 20px; } }
+  .big-slide__descr:last-child, .big-slide__facts:last-child {
+    margin-bottom: 0; }
+
+.big-slide__facts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+  @media (max-width: 1024px) {
+    .big-slide__facts {
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+      flex-direction: row;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap; } }
+  .big-slide__facts p {
+    font-size: 14px; }
+    @media (max-width: 1024px) {
+      .big-slide__facts p {
+        font-size: 12px; } }
+  .big-slide__facts .h4 {
+    margin-bottom: 0; }
+
+.big-slide__fact {
+  padding-bottom: 20px; }
+  @media (max-width: 1480px) {
+    .big-slide__fact {
+      padding-bottom: 15px; } }
+  @media (max-width: 1024px) {
+    .big-slide__fact {
+      max-width: 160px;
+      padding-left: 12px;
+      padding-right: 12px; } }
+  .big-slide__fact:last-child {
+    padding-bottom: 0; }
+    @media (max-width: 1024px) {
+      .big-slide__fact:last-child {
+        padding-bottom: 15px; } }
 
 .work-places-sec {
   background: url("../img/work-places/bg-work-places.jpg") no-repeat center top 20px, #f6f7fb;
@@ -5765,6 +5869,76 @@ button::-moz-focus-inner {
   .foto-report__slide.slick-current {
     -webkit-transform: scale(1) translate3d(0, 0, 0);
     transform: scale(1) translate3d(0, 0, 0); }
+
+.service-info-sec {
+  background: url("../img/service-info/bg-service-info.jpg") no-repeat center top, #fff;
+  background-size: 100% auto; }
+  @media (max-width: 1480px) {
+    .service-info-sec {
+      background: url("../img/service-info/bg-service-info-note.jpg") no-repeat center top, #fff;
+      background-size: 100% auto; } }
+  @media (max-width: 480px) {
+    .service-info-sec {
+      background: url("../img/service-info/bg-pattern-mobile.jpg") center center, #fff; } }
+
+.service-info {
+  padding-top: 20px; }
+  @media (max-width: 480px) {
+    .service-info {
+      padding-top: 0; } }
+
+.service-info__text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding-left: 80px;
+  padding-right: 80px; }
+  @media (max-width: 1480px) {
+    .service-info__text {
+      padding-left: 60px;
+      padding-right: 60px; } }
+  @media (max-width: 1024px) {
+    .service-info__text {
+      padding-left: 40px;
+      padding-right: 40px; } }
+  @media (max-width: 768px) {
+    .service-info__text {
+      padding-left: 30px;
+      padding-right: 30px; } }
+  @media (max-width: 680px) {
+    .service-info__text {
+      padding-left: 40px;
+      padding-right: 40px; } }
+  @media (max-width: 480px) {
+    .service-info__text {
+      padding-left: 0;
+      padding-right: 0; } }
+  .service-info__text .user-content {
+    width: 50%;
+    padding-left: 40px;
+    padding-right: 40px; }
+    @media (max-width: 1480px) {
+      .service-info__text .user-content {
+        padding-left: 30px;
+        padding-right: 30px; } }
+    @media (max-width: 768px) {
+      .service-info__text .user-content {
+        padding-left: 20px;
+        padding-right: 20px; } }
+    @media (max-width: 680px) {
+      .service-info__text .user-content {
+        width: 100%;
+        padding-left: 0;
+        padding-right: 0;
+        padding-bottom: 20px; } }
+    @media (max-width: 680px) {
+      .service-info__text .user-content:last-child {
+        padding-bottom: 0; } }
 
 .scroll {
   height: 1000px; }
