--- a/sass/main.scss
+++ b/sass/main.scss
@@ -46,5 +46,6 @@
 @import 'modules/service-steps';
 @import 'modules/foto-report';
 @import 'modules/service-info';
+@import 'modules/review-list';
 
 @import 'pages/home';
