--- a/sass/main.scss
+++ b/sass/main.scss
@@ -47,5 +47,6 @@
 @import 'modules/foto-report';
 @import 'modules/service-info';
 @import 'modules/review-list';
+@import 'modules/prices';
 
 @import 'pages/home';
