--- a/css/main.css
+++ b/css/main.css
@@ -2945,6 +2945,68 @@ button::-moz-focus-inner {
       .wave-gray-bottom:after {
         bottom: -27px; } }
 
+.wave-squared-white {
+  position: relative; }
+  .wave-squared-white:after {
+    content: '';
+    position: absolute;
+    bottom: -59px;
+    left: 50%;
+    max-width: 1516px;
+    width: calc(100% - 24px);
+    height: 60px;
+    border-bottom-right-radius: 50em 2em;
+    border-bottom-left-radius: 50em 2em;
+    pointer-events: none;
+    background: #fff;
+    z-index: 1;
+    -webkit-transform: translate3d(-50%, 0, 0);
+    transform: translate3d(-50%, 0, 0); }
+    @media (max-width: 1024px) {
+      .wave-squared-white:after {
+        bottom: -39px;
+        width: calc(100% - 20px);
+        height: 40px; } }
+    @media (max-width: 680px) {
+      .wave-squared-white:after {
+        bottom: -29px;
+        height: 30px; } }
+    @media (max-width: 480px) {
+      .wave-squared-white:after {
+        bottom: -19px;
+        height: 20px; } }
+
+.wave-squared-gray {
+  position: relative; }
+  .wave-squared-gray:after {
+    content: '';
+    position: absolute;
+    bottom: -59px;
+    left: 50%;
+    max-width: 1516px;
+    width: calc(100% - 24px);
+    height: 60px;
+    border-bottom-right-radius: 50em 2em;
+    border-bottom-left-radius: 50em 2em;
+    pointer-events: none;
+    background: #f6f7fb;
+    z-index: 1;
+    -webkit-transform: translate3d(-50%, 0, 0);
+    transform: translate3d(-50%, 0, 0); }
+    @media (max-width: 1024px) {
+      .wave-squared-gray:after {
+        bottom: -39px;
+        width: calc(100% - 20px);
+        height: 40px; } }
+    @media (max-width: 680px) {
+      .wave-squared-gray:after {
+        bottom: -29px;
+        height: 30px; } }
+    @media (max-width: 480px) {
+      .wave-squared-gray:after {
+        bottom: -19px;
+        height: 20px; } }
+
 .page-title {
   max-width: 960px;
   margin: 0 auto 60px;
@@ -5544,6 +5606,9 @@ button::-moz-focus-inner {
       .rooms-slider__nav a {
         margin-left: 4px;
         margin-right: 4px; } }
+    @media (max-width: 480px) {
+      .rooms-slider__nav a {
+        margin-bottom: 8px; } }
     @media (max-width: 680px) {
       .rooms-slider__nav a:first-child {
         margin-left: 0; } }
@@ -6049,7 +6114,7 @@ button::-moz-focus-inner {
         padding-top: 10px; } }
 
 .review-list__items {
-  margin-right: -32px; }
+  margin-right: -30px; }
   @media (max-width: 1024px) {
     .review-list__items {
       padding-left: 0;
@@ -6059,14 +6124,17 @@ button::-moz-focus-inner {
       margin-right: 0; } }
 
 .review-list__item {
-  width: calc(25% - 32px);
+  width: calc(25% - 30px);
   margin-bottom: 30px;
   padding: 20px 22px;
   border: 1px solid #dddee2;
   border-radius: 20px; }
   @media (max-width: 1480px) {
     .review-list__item {
-      width: calc(33.33333% - 32px); } }
+      width: calc(33.33333% - 30px); } }
+  @media (max-width: 768px) {
+    .review-list__item {
+      padding: 16px; } }
   @media (max-width: 680px) {
     .review-list__item {
       width: 100%;
@@ -6091,6 +6159,168 @@ button::-moz-focus-inner {
         font-size: 12px; } }
   .review-list__item-contact .h5 {
     margin-bottom: 0; }
+
+.prices-sec {
+  background: #f6f7fb; }
+
+.prices__nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding-bottom: 40px; }
+  @media (max-width: 1024px) {
+    .prices__nav {
+      padding-bottom: 30px; } }
+  @media (max-width: 680px) {
+    .prices__nav {
+      padding-bottom: 20px; } }
+  .prices__nav a {
+    display: block;
+    margin-left: 12px;
+    margin-right: 12px; }
+    @media (max-width: 1024px) {
+      .prices__nav a {
+        margin-left: 10px;
+        margin-right: 10px; } }
+    @media (max-width: 680px) {
+      .prices__nav a {
+        margin-left: 4px;
+        margin-right: 4px; } }
+    @media (max-width: 480px) {
+      .prices__nav a {
+        margin-bottom: 8px; } }
+    @media (max-width: 680px) {
+      .prices__nav a:first-child {
+        margin-left: 0; } }
+    @media (max-width: 680px) {
+      .prices__nav a:last-child {
+        margin-right: 0; } }
+
+.prices__list {
+  position: relative;
+  padding-bottom: 40px;
+  background: #fff;
+  overflow: hidden;
+  z-index: 3; }
+  @media (max-width: 1480px) {
+    .prices__list {
+      padding-bottom: 30px; } }
+  @media (max-width: 680px) {
+    .prices__list {
+      padding-bottom: 10px; } }
+
+.prices__block {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 100%;
+  max-width: 970px;
+  margin: 0 auto;
+  padding-left: 25px;
+  padding-right: 25px;
+  padding-top: 40px;
+  opacity: 0;
+  -webkit-transition: opacity 0.3s ease;
+  -o-transition: opacity 0.3s ease;
+  transition: opacity 0.3s ease;
+  -webkit-transform: translate3d(-50%, 0, 0);
+  transform: translate3d(-50%, 0, 0);
+  pointer-events: none; }
+  @media (max-width: 1024px) {
+    .prices__block {
+      padding-top: 30px; } }
+  @media (max-width: 680px) {
+    .prices__block {
+      padding-top: 20px;
+      padding-left: 15px;
+      padding-right: 15px; } }
+  .prices__block.active {
+    position: relative;
+    left: initial;
+    top: initial;
+    opacity: 1;
+    pointer-events: all;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0); }
+
+.prices__block-head {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-family: "Affect", "Helvetica Neue", Arial, sans-serif;
+  color: #acadb0; }
+  @media (max-width: 1024px) {
+    .prices__block-head {
+      font-size: 12px; } }
+
+.prices__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  border-bottom: 2px dotted #dddee2; }
+  @media (max-width: 680px) {
+    .prices__item {
+      padding-top: 20px;
+      padding-bottom: 20px; } }
+  .prices__item:last-child {
+    border-bottom: none; }
+  .prices__item:hover .prices__item-name .h5 {
+    color: #f3afd0; }
+
+.prices__item-name {
+  max-width: 50%; }
+  .prices__item-name .h5 {
+    margin-bottom: 5px;
+    -webkit-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease; }
+    @media (max-width: 1024px) {
+      .prices__item-name .h5 {
+        margin-bottom: 0; } }
+
+.prices__item-more {
+  color: #72e1f4;
+  font-size: 14px;
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease; }
+  @media (max-width: 1024px) {
+    .prices__item-more {
+      font-size: 12px; } }
+
+.prices__item-cost {
+  font-size: 14px; }
+  @media (max-width: 1024px) {
+    .prices__item-cost {
+      font-size: 12px; } }
+  .prices__item-cost .h5 {
+    display: inline;
+    margin-bottom: 0;
+    font-family: "Proxima Nova", "Helvetica Neue", Arial, sans-serif; }
 
 .scroll {
   height: 1000px; }
