--- a/sass/modules/_waves.scss
+++ b/sass/modules/_waves.scss
@@ -168,3 +168,67 @@
 		}
 	}
 }
+
+.wave-squared-white {
+	position: relative;
+	&:after {
+		content: '';
+		position: absolute;
+		bottom: -59px;
+		left: 50%;
+		max-width: 1516px;
+		width: calc(100% - 24px);
+		height: 60px;
+		border-bottom-right-radius: 50em 2em;
+		border-bottom-left-radius: 50em 2em;
+		pointer-events: none;
+		background: #fff;
+		z-index: 1;
+		transform: translate3d(-50%,0,0);
+		@include res(l) {
+			bottom: -39px;
+			width: calc(100% - 20px);
+			height: 40px;
+		}
+		@include res(s) {
+			bottom: -29px;
+			height: 30px;
+		}
+		@include res(xs) {
+			bottom: -19px;
+			height: 20px;
+		}
+	}
+}
+
+.wave-squared-gray {
+	position: relative;
+	&:after {
+		content: '';
+		position: absolute;
+		bottom: -59px;
+		left: 50%;
+		max-width: 1516px;
+		width: calc(100% - 24px);
+		height: 60px;
+		border-bottom-right-radius: 50em 2em;
+		border-bottom-left-radius: 50em 2em;
+		pointer-events: none;
+		background: #f6f7fb;
+		z-index: 1;
+		transform: translate3d(-50%,0,0);
+		@include res(l) {
+			bottom: -39px;
+			width: calc(100% - 20px);
+			height: 40px;
+		}
+		@include res(s) {
+			bottom: -29px;
+			height: 30px;
+		}
+		@include res(xs) {
+			bottom: -19px;
+			height: 20px;
+		}
+	}
+}
