Part of Promo Inner, some fix

--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -107,6 +107,13 @@ body {
 	}
 }
 
+.def-sec-squared {
+	padding-bottom: 1px;
+	@include res(s) {
+		padding-bottom: $pad-xxs;
+	}
+}
+
 .def-sec-waved {
 	padding-top: $pad-l;
 	padding-bottom: $pad-l;
