--- a/sass/main.scss
+++ b/sass/main.scss
@@ -48,5 +48,6 @@
 @import 'modules/service-info';
 @import 'modules/review-list';
 @import 'modules/prices';
+@import 'modules/promo-info';
 
 @import 'pages/home';
