--- a/css/main.css
+++ b/css/main.css
@@ -1711,15 +1711,15 @@ h5, .h5 {
   margin-right: -12px; }
   @media (max-width: 1024px) {
     .row {
-      margin-left: -10px;
-      margin-right: -10px; } }
+      margin-left: -14px;
+      margin-right: -14px; } }
   .row [class^="grid"] {
     padding-left: 12px;
     padding-right: 12px; }
     @media (max-width: 1024px) {
       .row [class^="grid"] {
-        padding-left: 10px;
-        padding-right: 10px; } }
+        padding-left: 14px;
+        padding-right: 14px; } }
   .row--center {
     -webkit-box-align: center;
     -ms-flex-align: center;
@@ -1768,8 +1768,8 @@ body {
   padding-right: 12px; }
   @media (max-width: 1024px) {
     .container {
-      padding-left: 10px;
-      padding-right: 10px; } }
+      padding-left: 14px;
+      padding-right: 14px; } }
 
 .aside-panel {
   position: fixed;
@@ -1850,6 +1850,12 @@ body {
   @media (max-width: 680px) {
     .def-sec-bottom {
       padding-bottom: 30px; } }
+
+.def-sec-squared {
+  padding-bottom: 1px; }
+  @media (max-width: 680px) {
+    .def-sec-squared {
+      padding-bottom: 10px; } }
 
 .def-sec-waved {
   padding-top: 60px;
@@ -2738,7 +2744,7 @@ button::-moz-focus-inner {
   @media (max-width: 1480px) {
     .breadcrumbs {
       top: 60px;
-      left: 275px; } }
+      left: 270px; } }
   @media (max-width: 1024px) {
     .breadcrumbs {
       top: 50px;
@@ -3076,7 +3082,7 @@ button::-moz-focus-inner {
       justify-content: space-between;
       width: 100%;
       padding-left: 50px;
-      padding-right: 10px;
+      padding-right: 14px;
       padding-top: 5px;
       padding-bottom: 5px;
       background: rgba(238, 238, 238, 0.95);
@@ -3119,6 +3125,10 @@ button::-moz-focus-inner {
     -webkit-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
     transition: all 0.3s ease; }
+    @media (max-width: 1480px) {
+      .top-panel__menu a {
+        padding-left: 5px;
+        padding-right: 5px; } }
     @media (max-width: 1024px) {
       .top-panel__menu a {
         padding-top: 10px;
@@ -3127,7 +3137,7 @@ button::-moz-focus-inner {
         padding-left: 6px;
         font-size: 12px; } }
     .top-panel__menu a:hover {
-      color: #7bd3e6; }
+      color: #f3afd0; }
 
 .top-panel__soc {
   padding-left: 12px;
@@ -3626,8 +3636,8 @@ button::-moz-focus-inner {
   padding-right: 12px; }
   @media (max-width: 1024px) {
     .footer__info {
-      padding-left: 10px;
-      padding-right: 10px; } }
+      padding-left: 14px;
+      padding-right: 14px; } }
   @media (max-width: 768px) {
     .footer__info {
       -ms-flex-wrap: wrap;
@@ -3768,8 +3778,8 @@ button::-moz-focus-inner {
       padding-top: 40px; } }
   @media (max-width: 1024px) {
     .footer__bottom {
-      padding-left: 10px;
-      padding-right: 10px;
+      padding-left: 14px;
+      padding-right: 14px;
       padding-top: 30px;
       font-size: 12px; } }
   @media (max-width: 680px) {
@@ -3857,7 +3867,7 @@ button::-moz-focus-inner {
 .big-slider .slider-dots {
   position: absolute;
   top: 160px;
-  left: 132px;
+  left: 92px;
   max-width: 510px; }
   @media (max-width: 1480px) {
     .big-slider .slider-dots {
@@ -3866,7 +3876,7 @@ button::-moz-focus-inner {
   @media (max-width: 1024px) {
     .big-slider .slider-dots {
       top: 60px;
-      left: 30px; } }
+      left: 45px; } }
   @media (max-width: 768px) {
     .big-slider .slider-dots {
       top: initial;
@@ -3916,13 +3926,17 @@ button::-moz-focus-inner {
   @media (max-width: 768px) {
     .big-slide {
       min-height: initial;
+      padding-top: 36px;
+      padding-bottom: 60px;
       background: #2a2c3d;
       background-image: none !important; } }
   @media (max-width: 680px) {
     .big-slide {
       padding-top: 33px;
       padding-bottom: 40px; } }
-  .big-slide:after {
+  .big-slide .container {
+    z-index: 1; }
+  .big-slide--blured:after {
     content: '';
     position: absolute;
     top: 0;
@@ -3936,10 +3950,8 @@ button::-moz-focus-inner {
     pointer-events: none;
     z-index: 0; }
     @media (max-width: 768px) {
-      .big-slide:after {
+      .big-slide--blured:after {
         content: none; } }
-  .big-slide .container {
-    z-index: 1; }
 
 .big-slide__img {
   position: relative;
@@ -3947,8 +3959,8 @@ button::-moz-focus-inner {
   @media (max-width: 768px) {
     .big-slide__img {
       display: block;
-      margin-left: -10px;
-      margin-right: -10px; } }
+      margin-left: -14px;
+      margin-right: -14px; } }
   @media (max-width: 768px) {
     .big-slide__img:after {
       content: '';
@@ -3983,8 +3995,11 @@ button::-moz-focus-inner {
   @media (max-width: 768px) {
     .big-slide__info {
       max-width: 620px;
-      margin: 20px auto 0;
+      margin: 25px auto 0;
       padding-left: 0; } }
+  @media (max-width: 480px) {
+    .big-slide__info {
+      margin-top: 20px; } }
   @media (max-width: 480px) {
     .big-slide__info .h1 {
       font-size: 20px; } }
@@ -4220,8 +4235,8 @@ button::-moz-focus-inner {
   margin-gutter: -12px; }
   @media (max-width: 1024px) {
     .animators__list {
-      margin-left: -10px;
-      margin-right: -10px; } }
+      margin-left: -14px;
+      margin-right: -14px; } }
   .animators__list--slided {
     margin-left: 0;
     margin-right: 0; }
@@ -4307,8 +4322,8 @@ button::-moz-focus-inner {
     margin-right: 12px; }
     @media (max-width: 1024px) {
       .animators-list__items-nav .btn {
-        margin-left: 10px;
-        margin-right: 10px; } }
+        margin-left: 14px;
+        margin-right: 14px; } }
     @media (max-width: 680px) {
       .animators-list__items-nav .btn {
         margin-left: 4px;
@@ -4476,8 +4491,8 @@ button::-moz-focus-inner {
   @media (max-width: 768px) {
     .our-offers__item-info {
       margin-left: 0;
-      padding-left: 10px;
-      padding-right: 10px; } }
+      padding-left: 14px;
+      padding-right: 14px; } }
   .our-offers__item-info .h3 {
     margin-bottom: 25px; }
     @media (max-width: 1480px) {
@@ -4579,6 +4594,9 @@ button::-moz-focus-inner {
     .additions .page-title {
       padding-top: 0; } }
 
+.additions .btn-center {
+  padding-bottom: 1px; }
+
 .additions__list, .additions-list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -4594,8 +4612,8 @@ button::-moz-focus-inner {
   overflow: hidden; }
   @media (max-width: 1024px) {
     .additions__list, .additions-list {
-      margin-left: -10px;
-      margin-right: -10px; } }
+      margin-left: -14px;
+      margin-right: -14px; } }
   .additions__list--center, .additions-list--center {
     -webkit-box-pack: center;
     -ms-flex-pack: center;
@@ -4616,8 +4634,8 @@ button::-moz-focus-inner {
   transition: all 0.5s ease; }
   @media (max-width: 1024px) {
     .addition {
-      padding-left: 10px;
-      padding-right: 10px;
+      padding-left: 14px;
+      padding-right: 14px;
       padding-top: 15px;
       padding-bottom: 15px; } }
   @media (max-width: 680px) {
@@ -4959,8 +4977,8 @@ button::-moz-focus-inner {
       flex-direction: column; } }
   @media (max-width: 1024px) {
     .contacts__wrap {
-      margin-left: -10px;
-      margin-right: -10px; } }
+      margin-left: -14px;
+      margin-right: -14px; } }
 
 .contacts__map {
   position: relative;
@@ -4973,8 +4991,8 @@ button::-moz-focus-inner {
       min-height: 660px; } }
   @media (max-width: 1024px) {
     .contacts__map {
-      padding-left: 10px;
-      padding-right: 10px; } }
+      padding-left: 14px;
+      padding-right: 14px; } }
   @media (max-width: 768px) {
     .contacts__map {
       width: 100%;
@@ -5002,8 +5020,8 @@ button::-moz-focus-inner {
   padding-right: 12px; }
   @media (max-width: 1024px) {
     .contacts__info {
-      padding-left: 10px;
-      padding-right: 10px; } }
+      padding-left: 14px;
+      padding-right: 14px; } }
   @media (max-width: 768px) {
     .contacts__info {
       width: 100%; } }
@@ -5166,8 +5184,8 @@ button::-moz-focus-inner {
   padding-bottom: 80px; }
   @media (max-width: 1024px) {
     .about-us__benefits {
-      margin-left: -10px;
-      margin-right: -10px; } }
+      margin-left: -14px;
+      margin-right: -14px; } }
   @media (max-width: 680px) {
     .about-us__benefits {
       padding-bottom: 20px; } }
@@ -5185,8 +5203,8 @@ button::-moz-focus-inner {
   transform: translate3d(0, 50px, 0); }
   @media (max-width: 1024px) {
     .about-us__benefit {
-      padding-left: 10px;
-      padding-right: 10px; } }
+      padding-left: 14px;
+      padding-right: 14px; } }
   @media (max-width: 680px) {
     .about-us__benefit {
       width: 50%;
@@ -5219,8 +5237,8 @@ button::-moz-focus-inner {
   padding-bottom: 80px; }
   @media (max-width: 1024px) {
     .about-us__facts {
-      margin-left: -10px;
-      margin-right: -10px; } }
+      margin-left: -14px;
+      margin-right: -14px; } }
   @media (max-width: 680px) {
     .about-us__facts {
       padding-bottom: 30px; } }
@@ -5265,8 +5283,8 @@ button::-moz-focus-inner {
   flex-wrap: wrap; }
   @media (max-width: 1024px) {
     .about-us__team {
-      margin-left: -10px;
-      margin-right: -10px; } }
+      margin-left: -14px;
+      margin-right: -14px; } }
   .about-us__team .h2 {
     width: 100%;
     text-align: center; }
@@ -5475,8 +5493,8 @@ button::-moz-focus-inner {
   text-align: center; }
   @media (max-width: 1024px) {
     .consist__item {
-      padding-left: 10px;
-      padding-right: 10px; } }
+      padding-left: 14px;
+      padding-right: 14px; } }
   @media (max-width: 680px) {
     .consist__item {
       width: 50%;
@@ -5540,8 +5558,8 @@ button::-moz-focus-inner {
   flex-wrap: wrap; }
   @media (max-width: 680px) {
     .rooms-benefits__list {
-      margin-left: -10px;
-      margin-right: -10px; } }
+      margin-left: -14px;
+      margin-right: -14px; } }
 
 .rooms-benefits__item {
   width: 20%;
@@ -5554,8 +5572,8 @@ button::-moz-focus-inner {
       margin-bottom: 30px; } }
   @media (max-width: 680px) {
     .rooms-benefits__item {
-      padding-left: 10px;
-      padding-right: 10px; } }
+      padding-left: 14px;
+      padding-right: 14px; } }
   @media (max-width: 480px) {
     .rooms-benefits__item {
       width: 50%;
@@ -5581,8 +5599,8 @@ button::-moz-focus-inner {
   @media (max-width: 680px) {
     .rooms-benefits__item-img {
       height: 68px;
-      padding-left: 10px;
-      padding-right: 10px; } }
+      padding-left: 14px;
+      padding-right: 14px; } }
   .rooms-benefits__item-img img {
     display: block;
     max-width: 100%;
@@ -5624,8 +5642,8 @@ button::-moz-focus-inner {
     margin-right: 12px; }
     @media (max-width: 1024px) {
       .rooms-slider__nav a {
-        margin-left: 10px;
-        margin-right: 10px; } }
+        margin-left: 14px;
+        margin-right: 14px; } }
     @media (max-width: 680px) {
       .rooms-slider__nav a {
         margin-left: 4px;
@@ -5750,8 +5768,8 @@ button::-moz-focus-inner {
     color: #fff; }
     @media (max-width: 1024px) {
       .form-bottom__rooms .btn {
-        margin-left: 10px;
-        margin-right: 10px; } }
+        margin-left: 14px;
+        margin-right: 14px; } }
     @media (max-width: 680px) {
       .form-bottom__rooms .btn {
         margin-left: 4px;
@@ -6040,8 +6058,8 @@ button::-moz-focus-inner {
       transform: translate3d(-50%, -50%, 0) scale(0.85) rotate(10deg) skew(-20deg, 0deg); }
   .foto-report__slide a {
     display: block;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 15px;
+    margin-bottom: 15px;
     border-radius: 20px;
     overflow: hidden;
     -webkit-transition: all 0.3s ease;
@@ -6060,6 +6078,10 @@ button::-moz-focus-inner {
     transition: all 0.3s ease;
     -webkit-transform: translate3d(-50%, -50%, 0) scale(0.8);
     transform: translate3d(-50%, -50%, 0) scale(0.8); }
+    .foto-report__slide .video-play:before, .foto-report__slide .video-play:after {
+      -webkit-transition-delay: 0.1s;
+      -o-transition-delay: 0.1s;
+      transition-delay: 0.1s; }
   .foto-report__slide.slick-current {
     -webkit-transform: scale(1) translate3d(0, 0, 0);
     transform: scale(1) translate3d(0, 0, 0); }
@@ -6220,8 +6242,8 @@ button::-moz-focus-inner {
     margin-right: 12px; }
     @media (max-width: 1024px) {
       .prices__nav a {
-        margin-left: 10px;
-        margin-right: 10px; } }
+        margin-left: 14px;
+        margin-right: 14px; } }
     @media (max-width: 680px) {
       .prices__nav a {
         margin-left: 4px;
@@ -6353,6 +6375,55 @@ button::-moz-focus-inner {
     display: inline;
     margin-bottom: 0;
     font-family: "Proxima Nova", "Helvetica Neue", Arial, sans-serif; }
+
+.promo-info {
+  max-width: 1260px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap; }
+
+.promo-info__text {
+  width: 50%;
+  padding-left: 20px;
+  padding-right: 40px;
+  padding-bottom: 30px; }
+  @media (max-width: 1024px) {
+    .promo-info__text {
+      padding-right: 30px;
+      padding-left: 10px; } }
+  @media (max-width: 680px) {
+    .promo-info__text {
+      width: 100%;
+      padding-left: 0;
+      padding-right: 0; } }
+
+.promo-info__img {
+  width: 50%;
+  padding-right: 20px;
+  padding-left: 40px;
+  padding-bottom: 30px; }
+  @media (max-width: 1024px) {
+    .promo-info__img {
+      padding-left: 30px;
+      padding-right: 10px; } }
+  @media (max-width: 680px) {
+    .promo-info__img {
+      width: 100%;
+      padding-left: 0;
+      padding-right: 0; } }
+  .promo-info__img img {
+    display: block;
+    max-width: 100%;
+    border: 1px solid #dddee2;
+    border-radius: 20px; }
 
 .scroll {
   height: 1000px; }
