--- a/sass/modules/_foto-report.scss
+++ b/sass/modules/_foto-report.scss
@@ -64,8 +64,8 @@
 	}
 	a {
 		display: block;
-		margin-top: 10px;
-		margin-bottom: 10px;
+		margin-top: 15px;
+		margin-bottom: 15px;
 		border-radius: 20px;
 		overflow: hidden;
 		transition: all 0.3s ease;
@@ -81,6 +81,9 @@
 		opacity: 0;
 		transition: all 0.3s ease;
 		transform: translate3d(-50%,-50%,0) scale(0.8);
+		&:before, &:after {
+			transition-delay: 0.1s;
+		}
 	}
 	&.slick-current {
 		transform: scale(1) translate3d(0,0,0);
