--- a/sass/modules/_top-panel.scss
+++ b/sass/modules/_top-panel.scss
@@ -61,6 +61,10 @@
 		letter-spacing: 0.06em;
 		text-transform: uppercase;
 		transition: all 0.3s ease;
+		@include res(xl) {
+			padding-left: 5px;
+			padding-right: 5px;
+		}
 		@include res(l) {
 			padding-top: 10px;
 			padding-bottom: 10px;
@@ -69,7 +73,7 @@
 			font-size: 12px;
 		}
 		&:hover {
-			color: $link-color;
+			color: $pink;
 		}
 	}
 }
